docs(reference-dictionary,articles,system-design-architecture): split security and data architecture terms into dedicated files; relocate JVM concurrency terms; add data engineering source article